# Weather

./: .gitignore  data.json  pyproject.toml  rain.bat  rain.py  scrapping.py  snow.py  test.csv  weather.code-workspace
Snow/: snow.bat  snow.ipynb  snow.py
