[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.27.1",
    "yagmail>=0.15.293",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "ruff>=0.8.3",
]
